--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
 	"name": "noteful-app",
 	"version": "0.0.1",
 	"license": "MIT",
-	"author": "Chris Klanac",
+	"author": "Christina Moore",
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/cklanac/noteful-app.git"
 	},
 	"main": "server.js",
 	"scripts": {
-    "start": "node server.js",
-    "test": "mocha --exit"
-  },
+		"start": "node server.js",
+		"test": "cross-env NODE_ENV=test nyc mocha --exit"
+	},
 	"dependencies": {
 		"chai": "^4.1.2",
 		"chai-http": "^3.0.0",
@@ -20,8 +20,12 @@
 		"knex": "^0.14.2",
 		"mocha": "^5.0.0",
 		"morgan": "^1.9.0",
+		"nyc": "^11.4.1",
 		"pg": "^7.4.1",
 		"pg-error-constants": "^1.0.0",
 		"treeize": "^2.1.2"
+	},
+	"devDependencies": {
+		"cross-env": "^5.1.3"
 	}
 }
